@@ -3,13 +3,18 @@ package com.badlogic.gdx.tests.lwjgl3;
 import com.badlogic.gdx.ApplicationAdapter;
 import com.badlogic.gdx.ApplicationListener;
 import com.badlogic.gdx.Gdx;
+import com.badlogic.gdx.Input;
+import com.badlogic.gdx.Files.FileType;
 import com.badlogic.gdx.Graphics.DisplayMode;
 import com.badlogic.gdx.backends.lwjgl3.Lwjgl3Application;
 import com.badlogic.gdx.backends.lwjgl3.Lwjgl3ApplicationConfiguration;
 import com.badlogic.gdx.backends.lwjgl3.Lwjgl3Window;
 import com.badlogic.gdx.backends.lwjgl3.Lwjgl3WindowConfiguration;
+import com.badlogic.gdx.graphics.Color;
 import com.badlogic.gdx.graphics.GL20;
+import com.badlogic.gdx.graphics.Pixmap;
 import com.badlogic.gdx.graphics.Texture;
+import com.badlogic.gdx.graphics.Pixmap.Blending;
 import com.badlogic.gdx.graphics.g2d.SpriteBatch;
 import com.badlogic.gdx.math.MathUtils;
 import com.badlogic.gdx.tests.BulletTestCollection;
@@ -24,6 +29,7 @@ public class MultiWindowTest {
 	
 	public static class MainWindow extends ApplicationAdapter {
 		Class[] childWindowClasses = { ShaderCollectionTest.class, BulletTestCollection.class, UITest.class, Basic3DSceneTest.class };
+		private Lwjgl3Window latestWindow;
 		
 		@Override
 		public void create () {
@@ -41,14 +47,30 @@ public class MultiWindowTest {
 			sharedSpriteBatch.end();
 			
 			if(Gdx.input.justTouched()) {
-				Lwjgl3Application app = (Lwjgl3Application)Gdx.app;
-				Lwjgl3WindowConfiguration config = new Lwjgl3WindowConfiguration();
-				DisplayMode mode = Gdx.graphics.getDisplayMode();
-				config.setWindowPosition(MathUtils.random(0, mode.width - 640), MathUtils.random(0, mode.height - 480));
-				config.setTitle("Child window");
-				Class clazz = childWindowClasses[MathUtils.random(0, childWindowClasses.length - 1)];
-				ApplicationListener listener = createChildWindowClass(clazz);
-				Lwjgl3Window window = app.newWindow(listener, config);
+				if (Gdx.input.isButtonPressed(Input.Buttons.RIGHT) && latestWindow != null){
+					latestWindow.setTitle("Retitled window");
+					int size = 48;
+					Pixmap.setBlending(Blending.None);
+					Pixmap icon = new Pixmap(size, size, Pixmap.Format.RGBA8888);
+					icon.setColor(Color.BLUE);
+					icon.fill();
+					icon.setColor(Color.CLEAR);
+					for (int i = 0; i < size; i += 3)
+						for (int j = 0; j < size; j += 3)
+							icon.drawPixel(i, j);
+					latestWindow.setIcon(icon);
+					icon.dispose();
+				} else {
+					Lwjgl3Application app = (Lwjgl3Application)Gdx.app;
+					Lwjgl3WindowConfiguration config = new Lwjgl3WindowConfiguration();
+					DisplayMode mode = Gdx.graphics.getDisplayMode();
+					config.setWindowPosition(MathUtils.random(0, mode.width - 640), MathUtils.random(0, mode.height - 480));
+					config.setTitle("Child window");
+					config.setWindowIcon(FileType.Internal, "data/testdot.png");
+					Class clazz = childWindowClasses[MathUtils.random(0, childWindowClasses.length - 1)];
+					ApplicationListener listener = createChildWindowClass(clazz);
+					latestWindow = app.newWindow(listener, config);
+				}
 			}
 		}
 
